# Fraim-Context-MCP

./: .cursorrules  .gitignore  DEVELOPMENT_PLAN.md  README.md  docker-compose.yml  pyproject.toml
DNA/: .cursorrules  CHANGELOG.json  DEVELOPMENT_PLAN.md  FIRST_PROMPT.md  MANIFEST.md  README.md  pyproject.toml
DNA/scripts/: setup_doppler.sh  verify_env.py
DNA/specs/: ARCHITECTURE.md  CONTRACTS.md  DEPENDENCIES.md  MCP_STATUS.md  README.md
DNA/ui/: app.py
scripts/: init_db.sql
src/fraim_mcp/: __init__.py  config.py
src/fraim_mcp/cache/: __init__.py  redis_client.py
src/fraim_mcp/database/: __init__.py  client.py  models.py
src/fraim_mcp/ingestion/: __init__.py  embeddings.py
src/fraim_mcp/llm/: __init__.py  client.py
src/fraim_mcp/observability/: __init__.py  setup.py
src/fraim_mcp/retrieval/: __init__.py  reranker.py  service.py
src/fraim_mcp/server/: __init__.py  http_server.py
tests/: __init__.py
tests/stage_0/: __init__.py  test_connectivity.py  test_doppler.py  test_secrets.py
tests/stage_1/: __init__.py  test_client.py  test_config.py  test_crud.py  test_models.py  test_schema.py
tests/stage_2/: __init__.py  test_embedding_storage.py  test_embeddings.py  test_llm_client.py
tests/stage_3/: __init__.py  test_cache.py  test_hybrid_search.py  test_reranker.py  test_search_service.py
tests/stage_4/: __init__.py  test_http_server.py  test_observability.py
tests/stage_5/: __init__.py  test_chaos.py  test_contracts.py  test_e2e.py
